# stripe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: async_payment_flow.py  create_payment_intent.py  list_customers.py  webhook_handler.py
src/stripewrap/: __init__.py  async_client.py  client.py  exceptions.py  models.py  pagination.py  retry.py  webhooks.py
tests/: conftest.py  test_async_client.py  test_client.py  test_exceptions.py  test_models.py  test_pagination.py  test_retry.py  test_webhooks.py
