[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stripewrap"
version = "0.1.0"
description = "The async-first Stripe SDK Python deserves — typed, retryable, and easy to test"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "E339-art", email = "edwin.three@icloud.com" }]
keywords = ["stripe", "payments", "async", "sdk", "api", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27", "pydantic>=2.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/E339-art/stripe"
Repository = "https://github.com/E339-art/stripe"
Documentation = "https://github.com/E339-art/stripe#readme"
"Bug Tracker" = "https://github.com/E339-art/stripe/issues"
Changelog = "https://github.com/E339-art/stripe/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/stripewrap"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "PTH", "C4", "PIE"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["stripewrap"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=stripewrap --cov-report=term-missing"

[tool.coverage.run]
source = ["src/stripewrap"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]
show_missing = true
fail_under = 80
